[package]
name = "toolbox"
version = "1.1.4"
edition = "2021"

[dependencies]
chrono = "0.4.19"
fasteval = "0.2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.78"
wee_alloc = "0.4.5"
yew = "0.18"

[profile.release]
panic = 'abort' 
codegen-units = 1
opt-level = 'z' 
lto = true